--- a/package.json
+++ b/package.json
@@ -10,13 +10,10 @@
     "start": "node ./bin/index.js",
     "dev": "ts-node ./src/index.ts"
   },
-  "dependencies": {
-    "express": "^4.18.2"
-  },
   "devDependencies": {
-    "typescript": "^4.8.4",
     "@types/express": "^4.17.14",
+    "@types/node": "^18.11.7",
     "ts-node": "^10.9.1",
-    "@types/node": "^18.11.7"
+    "typescript": "^4.8.4"
   }
 }
