--- a/back-end/package.json
+++ b/back-end/package.json
@@ -11,8 +11,12 @@
     "dev": "ts-node ./src/index.ts"
   },
   "devDependencies": {
+    "@types/express": "^4.17.14",
     "@types/node": "^18.11.7",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.4"
+  },
+  "dependencies": {
+    "express": "^4.18.2"
   }
 }
