--- a/back-end/package.json
+++ b/back-end/package.json
@@ -8,12 +8,12 @@
   "scripts": {
     "build": "tsc",
     "start": "node ./bin/index.js",
-    "dev": "ts-node ./src/index.ts"
+    "dev": "ts-node-dev ./src/index.ts"
   },
   "devDependencies": {
     "@types/express": "^4.17.14",
     "@types/node": "^18.11.7",
-    "ts-node": "^10.9.1",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^4.8.4"
   },
   "dependencies": {
