--- a/back-end/package.json
+++ b/back-end/package.json
@@ -17,6 +17,7 @@
     "typescript": "^4.8.4"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "firebase": "^9.14.0"
   }
 }
