--- a/back-end/package.json
+++ b/back-end/package.json
@@ -13,11 +13,13 @@
   "devDependencies": {
     "@types/express": "^4.17.14",
     "@types/node": "^18.11.7",
+    "@types/uuid": "^9.0.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.8.4"
   },
   "dependencies": {
     "express": "^4.18.2",
-    "firebase": "^9.14.0"
+    "firebase": "^9.14.0",
+    "uuid": "^9.0.0"
   }
 }
